@@ -1,18 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD duke3d-data-1.0-r1.ebuild 1142 SHA256 2fc5339fac91596492000da729a28dcd719d66a69a20b5ea46ef99baee3bd0bd SHA512 cb7a07bed7a585a9a345b90dddffb364b3ee40bc3a45a30f6ff94a404d039de6d7d4c12a5e6d38a8692d0ff55aa5adccbd0bf403406fc22aa857745ab90befdc WHIRLPOOL abd00dcd95d62daee83223db768317e59204e85fd88afb10ec7a6f4ac74a3c6487d435a8885a91c516dde19095adb1e1eb08f03e8d929ceeda410205ae9c54ba
+DIST setup_duke3d_2.0.0.84.exe 38994440 SHA256 ac3c348620bb9a530d5c0d9274820c6bc204922b0b9247fbe40b4e926d375022 SHA512 0b62da98d01b385a6f7d4652eb2c28e80b42b443533b19262f94202802cd0c8031f20a8c687e4fc3906d6d9cb1e40558c3fd292a37d7a948febf10322b95b0f2 WHIRLPOOL 5ad53cc3456e4fc79bd87d5d5b33f8070a4f871d27261c3f0a62ee13b22d7a2b41cc47a23a3d478aac99b97203123bef1597a83a59b4175a66cb2e2b6a121f1b
+EBUILD duke3d-data-1.0-r1.ebuild 1474 SHA256 1055eb872968aff80738242fbc6da594051d86d802c598e401660bc1b4316579 SHA512 2deffb00054be04d95016cacb8ceaedcee00879add2193023d7c1b2761da33bfce5050ed7eda1067b749d218fe4f32438604f0e58d5b439037c1ff32aad0c6d8 WHIRLPOOL 0241ac176a550e50e20f0534505271bed2b1e0888f51c1cbf5d34308993a0d3a3231c39a97f8bbed5fb78ddd2814882fcde6407c4a2f87f307320e585b41c724
 EBUILD duke3d-data-1.0.ebuild 1004 SHA256 7ab07d8cd787966923de054904d1c48478c60fe9d858fbd8c9112754cba344d6 SHA512 cfebd21042e68da30717c7c5dff5b5e7dbf0e9dd0c9f27d543b246e6543fb579e4c07c2a4591b9385d1cc85f5070e943a8ecfa5343ee434c9eec74a015e44c0a WHIRLPOOL 6202e12f11691f26d2f3b73b23a04866a4dd85d76801f6623d94183e31c86f49b7cafd43e9db721c8acff35b2c354f8ccf79fb5f85e37e3a0bc4e66bc45663d2
-MISC ChangeLog 1265 SHA256 d1cac986cd3e1e21f6c6e06b782208d779a0f24b9d3f8bc2a32e518cc3689b18 SHA512 87e3fdb03759a23d9e0b3a718ff1d9aa48ae3fb84ee02a1089383ed51b27e348a999248831ff338db09c0f479532ef903849b1d6ffcead0e3719af07ba332009 WHIRLPOOL 47ba4b789cd197d8f0a0a60cd062730e7d415cbdfed71c29a05678fa69d4760c7a6c8fb170a32b2cff88bc7e39345a42ef24daae3fbd6e75e5de394001309d38
-MISC metadata.xml 160 SHA256 5ac0a3647e8149d52ce55d391cf1680ac52d6f0330be21c3bca4790b971b5e5d SHA512 e5ae2b384aa96a402995bf0e8b4c29d38d57f1ebc44eeca71d7eda9a29431b7737c3c3a5df053e868a21c21abb457658344e7fb7c2102d4625a160273048c2db WHIRLPOOL b626c8afedc54ba9adb429cb53f860c0165702b1cea15f5c84c4e458cc94f28755ec66c5b73d9ecc155c1de70c82e1d79ba859c2124d0a78437681f2786e1246
+MISC ChangeLog 1362 SHA256 8fb5ff6bb1b6457ae4c26fae64d99bfd3bf566d995cd94ce9d9713c4fbfe4bde SHA512 19e59e0c3219174f4de9f5f1c23c070c6a4c2ed1bb98201620f10c2c9f57769795c27901515290b84407b3a0bd1f25c58a1d0a73833bfbf429a3c18447924775 WHIRLPOOL 23b3a913e9f9b8c65550eafdbd3eca44efd4671ee870082a9b7523f8a8b003e7b9cb1b4f5704874c2101f1e70e00101672850cb21c69f845e7446ec37ec954cf
+MISC metadata.xml 245 SHA256 0cf147602fae37f99b2c46e78bbc0c75131ce1bcc054e111d800b7c940c17bdb SHA512 882b82ef06149b77aca3c07887e05f08aca330745d407fa120c78ffdcc106379cfec8b3773717428c287bfef87a21df7651419f4ab921899e0581140feea86f5 WHIRLPOOL 5c18de6ca4378cc2a7e1bd4a43ec2814e4d97fddb45141d3263b85f2eba9f97caf1f35a78a16dbdc639c05ff87d6e133dce03525ea13677aadb1aeae3f03c3a1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRzNU7AAoJEFpvPKfnPDWzr90H/2dzIJeJ1b+q41C2mNHuDEbR
-K/IUA+o1Yift0nhWr5FOhlGx2Ni48R0zL/1xWLKYNV+uN8KWFx4QyA8pM+Twc4Oc
-/6LDlagu4NjbofRxC9KUaDgIGojDAyXCGiDCcL0OrItJeJdIQ+haiei5E/oMdSz6
-vUYTKYhMKc3+uRb9vkGCzjdBnPq4LaVDFL9aaXAv1conN+jNJpNElM0cL0KK/6yn
-igxjE44TUH7C/aUqLS3R3+TZYLVeUPK0UxUMFz+lUQxwJfmgqm8ngrImtTbR5Ww5
-uW5OWwmrwN5545SRe2WPZeA6LRlGj4iVcb1fNQflvUz2oaHgwQ/AXtvYfj1JasY=
-=rNiO
+iQEcBAEBCAAGBQJSj+OTAAoJEFpvPKfnPDWzlbQH+wdR16LQvnErHamCk2uyLcxe
+R7utomAV0T/uIzxTP9FgG17TZy1sOi8ASLUd5792StZH2ZYfBvnOW36iauen/Th3
+DWAd2Qxw9NeP2nPIGIpVIhn/oFwWwPNINdcgdopzJJ1knu/qGycQ3Kw0kNnjFkcE
++LeuiTkboX6D5qVamINmVVYeYMviRirTaEmpKmrh7vuu2+z8igtqTKiy0WKkib1w
+G0FysWROgUQb8g9GdatMrHu3Mt0oB+aKQD+84sjLa7+MgV65FHiySsC4cgGZe49M
+12D5TyNsK9jSf0AkZ3ojJLS6RXi9GmBzgosszV7c5wxAkUgTSOGz7eAqE3Nnrqc=
+=RATw
 -----END PGP SIGNATURE-----
