@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>games</herd>
+	<herd>games</herd>
+	<use>
+		<flag name='gog'>Extract the data from the GOG.com installer.</flag>
+	</use>
 </pkgmetadata>
