@@ -1,10 +1,15 @@
-DEFINED_PHASES=compile install postinst preinst setup unpack
+DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
+DEPEND=gog? ( app-arch/innoextract )
 DESCRIPTION=Duke Nukem 3D data files
+EAPI=5
 HOMEPAGE=http://www.3drealms.com/
+IUSE=gog cdinstall
 KEYWORDS=~amd64 ~hppa ~ppc ~x86
 LICENSE=DUKE3D
-PROPERTIES=interactive
+PROPERTIES=cdinstall? ( interactive )
 RDEPEND=|| ( games-fps/eduke32 games-fps/duke3d )
+REQUIRED_USE=^^ ( cdinstall gog )
 SLOT=0
+SRC_URI=gog? ( setup_duke3d_2.0.0.84.exe )
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cdrom	415b847346ef9001a89e5c7da6711215	eutils	4878e7f88afc0ba0866ac112190b0fd4	games	0fb7637597e0869f6c8be79b11d0135a	multilib	892e597faee02a5b94eb02ab512e7622	portability	536c5e70c5fb252ed3b769e04aa3f05b	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=776aae2d7a20e7a4065da3668ca9fb04
+_md5_=bdd74f639cba7187dfe3f4a175c917de
