@@ -1,8 +1,12 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/hppa/package.use.mask,v 1.131 2013/10/25 14:52:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/hppa/package.use.mask,v 1.132 2013/11/22 23:06:11 hasufell Exp $
 
 # DON'T TOUCH THIS FILE. Instead, file a bug and assign it to <hppa@gentoo.org>.
+
+# Julian Ospald <hasufell@gentoo.org> (23 Nov 2013)
+# FIXME: app-arch/innoextract not available under hppa yet
+games-fps/duke3d-data gog
 
 # Jeroen Roovers <jer@gentoo.org> (25 Oct 2013)
 # Building against libatomic_ops fails (bug #453704)
