@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/duke3d-data
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/duke3d-data/ChangeLog,v 1.8 2013/06/28 00:13:48 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/duke3d-data/ChangeLog,v 1.9 2013/11/22 23:06:53 hasufell Exp $
+
+  22 Nov 2013; Julian Ospald <hasufell@gentoo.org> duke3d-data-1.0-r1.ebuild:
+  add gog useflag
 
 *duke3d-data-1.0-r1 (28 Jun 2013)
 
